--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,12 @@ version: "3.9"
 
 services:
 
-  backend:
+  web:
     image: kanap
     build: .
     ports:
       - "3000:3000"
-    volumes:
-      - ./backend:/app/backend
-
-  frontend:
-    image: kanap
-    build: .
-    ports: 
       - "8080:8080"
     volumes:
+      - ./backend:/app/backend
       - ./frontend:/app/frontend
